[gd_scene load_steps=17 format=2]

[ext_resource path="res://Project 01/Player Crystal.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Additional/HitBoxes.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlay/StatsUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Additional/HurtBoxes.tscn" type="PackedScene" id=5]
[ext_resource path="res://Project 01/Arrow.png" type="Texture" id=6]
[ext_resource path="res://Player/PlayerStatUI.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 5.79825

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 8.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Arrow",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 180, 90 )
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.906659, 1.10131 )
shape = SubResource( 1 )

[node name="HurtBoxes" parent="." instance=ExtResource( 5 )]
collision_layer = 2
collision_mask = 64
priority = 1.0

[node name="CollisionShape2D" parent="HurtBoxes" index="0"]
shape = SubResource( 2 )

[node name="AimPoint" type="Position2D" parent="."]

[node name="HitBoxes" parent="AimPoint" instance=ExtResource( 3 )]
position = Vector2( 18, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="AimPoint/HitBoxes" index="0"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="AimPoint"]
modulate = Color( 0.988235, 0.815686, 0.682353, 0.745098 )
position = Vector2( 18, 0 )
frames = SubResource( 9 )
animation = "Arrow"
frame = 2
playing = true

[node name="StatsUI" parent="." instance=ExtResource( 4 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 25.0
margin_bottom = 25.0
script = ExtResource( 7 )

[connection signal="area_entered" from="HurtBoxes" to="." method="_on_HurtBoxes_area_entered"]
[connection signal="body_entered" from="HurtBoxes" to="." method="_on_HurtBoxes_body_entered"]

[editable path="HurtBoxes"]
[editable path="AimPoint/HitBoxes"]
[editable path="StatsUI"]
